[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui_elements/Button_Style.tres" type="StyleBox" id=1]
[ext_resource path="res://ui_elements/font/Title_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui_elements/font/Menu_Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui_elements/font/UI_Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui_elements/MenuBG.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/upgradescreen/Upgradescreen.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.121569, 0.180392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 250
custom_constants/margin_top = 200
custom_constants/margin_left = 250
custom_constants/margin_bottom = 250
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBG" parent="MarginContainer" instance=ExtResource( 5 )]
margin_left = 250.0
margin_top = 200.0
margin_right = 1693.0
margin_bottom = 855.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MenuBG"]
margin_right = 1443.0
margin_bottom = 655.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuBG/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1423.0
margin_bottom = 635.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer"]
margin_right = 1403.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "UPGRADES"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 1403.0
margin_bottom = 540.0
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 482.0
margin_bottom = 410.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 482.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Familienpizzen"

[node name="Label2" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 482.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 4 )
text = "Werfe mehrere Pizzen"
align = 1

[node name="Kosten" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 482.0
margin_bottom = 305.0
custom_fonts/font = ExtResource( 4 )
text = "Kosten:"
align = 1

[node name="buy_multishot" type="Button" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 482.0
margin_bottom = 410.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Kaufen"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 532.0
margin_right = 826.0
margin_bottom = 410.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 294.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Peperoni"

[node name="Label2" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 145.0
margin_right = 294.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 4 )
text = "Mehr Schaden"
align = 1

[node name="Kosten" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 250.0
margin_right = 294.0
margin_bottom = 305.0
custom_fonts/font = ExtResource( 4 )
text = "Kosten:"
align = 1

[node name="buy_damage" type="Button" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 355.0
margin_right = 294.0
margin_bottom = 410.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Kaufen"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 876.0
margin_right = 1403.0
margin_bottom = 410.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 527.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Highspeed Ofen"

[node name="Label2" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 145.0
margin_right = 527.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 4 )
text = "Pizzawerfrate erhöhen"
align = 1

[node name="Kosten" type="Label" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 250.0
margin_right = 527.0
margin_bottom = 305.0
custom_fonts/font = ExtResource( 4 )
text = "Kosten:"
align = 1

[node name="buy_firerate" type="Button" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 355.0
margin_right = 527.0
margin_bottom = 410.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Kaufen"

[node name="close" type="Button" parent="MarginContainer/MenuBG/MarginContainer/VBoxContainer"]
margin_top = 560.0
margin_right = 1403.0
margin_bottom = 615.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Schließen"
[connection signal="pressed" from="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/buy_multishot" to="." method="_on_buy_multishot_pressed"]
[connection signal="pressed" from="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/buy_damage" to="." method="_on_buy_damage_pressed"]
[connection signal="pressed" from="MarginContainer/MenuBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/buy_firerate" to="." method="_on_buy_firerate_pressed"]
[connection signal="pressed" from="MarginContainer/MenuBG/MarginContainer/VBoxContainer/close" to="." method="_on_close_pressed"]
